--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/desafioromana.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/desafio-romana.css">
     <title>Desafio Romana</title>
 </head>
 <body>
-    <h1>Desafio Romana</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi congue nibh ut enim mattis, vitae vehicula metus placerat. <br>
-        Maecenas faucibus lorem at elit accumsan iaculis. Vestibulum in blandit tortor. Phasellus posuere lacus est, vitae pharetra turpis <br>
-        suscipit eget. Nunc mi leo, elementum in tempus malesuada, tincidunt eget dolor. Donec placerat maximus justo bibendum <br>
-        tempus. Vivamus vitae efficitur leo, non fringilla magna. Nulla venenatis non felis ut scelerisque. Aliquam porta elementum massa, <br>
-        non dictum diam interdum non. Sed in lacinia nisl. Nulla facilisi. Etiam a mi venenatis, auctor diam eu, molestie urna.
-    </p>
-    <a href="https://github.com/desafio-romana">github.com/desafio-romana</a>
+    <header>
+        <a href="."><img src="src/img/desafio-romana-branco-logo.png" alt="Desafio Romana" height="100px"></a>
+        <nav>
+            <ul>
+                <li><a href=".">INÍCIO</a></li>
+                <li><a href="fotos">FOTOS</a></li>
+                <li><a href="regulamento">REGULAMENTO</a></li>
+                <li><a href="inscricao">INSCRIÇÃO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <p id="demo"></p>
+    <script src="src/js/desafio-romana.js"></script>
 </body>
 </html>
