--- a/404.html
+++ b/404.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/404.css">
-    <title>Desafio Romana - Erro 404</title>
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/desafio-romana.css">
+    <link rel="stylesheet" href="src/css/404.css">
+    <title>Erro 404 - Desafio Romana</title>
 </head>
 <body>
-    <div id="content">
-        <h1>Erro 404</h1>
-        <p>Página não encontrada.</p>
-        <a href=".">desafio-romana.github.io</a>
+
 </body>
 </html>
