--- a/fotos/index.html
+++ b/fotos/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/css/reset.css">
-    <link rel="stylesheet" href="../src/css/desafio-romana.css">
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/desafio-romana.css">
     <title>Fotos - Desafio Romana</title>
 </head>
 <body>
-    
+    <!-- Cabeçalho -->
+    <header>
+        <a href="."><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
+        <nav>
+            <ul>
+                <li><a href="/">INÍCIO</a></li>
+                <li><a href="/fotos">FOTOS</a></li>
+                <li><a href="/regulamento">REGULAMENTO</a></li>
+                <li><a href="/inscricao">INSCRIÇÃO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Conteudo -->
+    <div id="content">
+        <div>
+            FOTOS
+        </div>
+    </div>
 </body>
 </html>
