--- a/404.html
+++ b/404.html
@@ -3,12 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/desafio-romana.css">
-    <link rel="stylesheet" href="src/css/404.css">
-    <title>Erro 404 - Desafio Romana</title>
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="icon" href="/src/img/romana-mtb-icon.png">
+    <title>Erro 404 - Romana MTB</title>
+    <style>
+        #content div {
+            top: 250px;
+            text-align: center;
+        }
+        #content h1 {
+            color: #fff;
+            font-weight: normal;
+            font-size: 80px;
+            margin: 0;
+        }
+        #content p {
+            font-weight: normal;
+            font-size: 30px;
+        }
+    </style>
 </head>
 <body>
-
+    <header>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
+        <nav>
+            <ul>
+                <li><a href="/">INÍCIO</a></li>
+                <li><a href="/fotos">FOTOS</a></li>
+                <li><a href="/regulamento">REGULAMENTO</a></li>
+                <li><a href="/inscricao">INSCRIÇÃO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div id="content">
+        <div>
+            <h1>ERRO 404</h1>
+            <p>Página não encontrada.</p>
+        </div>
+    </div>
+    <footer>
+        <p>© Romana MTB - Todos os direitos reservdaos.</p>
+    </footer>
 </body>
 </html>
