--- a/fotos/index.html
+++ b/fotos/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/desafio-romana.css">
-    <title>Fotos - Desafio Romana</title>
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="icon" href="/src/img/romana-mtb-icon.png">
+    <title>Fotos - Romana MTB</title>
 </head>
 <body>
-    <!-- Cabeçalho -->
     <header>
-        <a href="."><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
         <nav>
             <ul>
                 <li><a href="/">INÍCIO</a></li>
@@ -20,11 +20,13 @@
             </ul>
         </nav>
     </header>
-    <!-- Conteudo -->
     <div id="content">
         <div>
             FOTOS
         </div>
     </div>
+    <footer>
+        <p>© Romana MTB - Todos os direitos reservdaos.</p>
+    </footer>
 </body>
 </html>
