--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/desafio-romana.css">
-    <title>Desafio Romana</title>
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="icon" href="/src/img/romana-mtb-icon.png">
+    <title>Romana MTB</title>
     <style>
         /* Background */
         #content {
@@ -18,9 +19,8 @@
     </style>
 </head>
 <body>
-    <!-- Cabeçalho -->
     <header>
-        <a href="."><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
         <nav>
             <ul>
                 <li><a href="/">INÍCIO</a></li>
@@ -30,10 +30,9 @@
             </ul>
         </nav>
     </header>
-    <!-- Conteudo -->
     <div id="content">
         <div>
-            <img id="desafio-romana-mtb" src="/src/img/desafio-romana-mtb-logo.png" alt="Desafio Romana MTB" height="250px" style="margin-top: 40px;">
+            <img id="desafio-romana-mtb" src="/src/img/desafio-romana-mtb-logo.png" alt="Romana MTB MTB" height="250px" style="margin-top: 40px;">
             <h1>04 / 02 / 2024</h1>
             <h2>BARROSO / MG</h2>
             <h3>EM PROL DO INSTITUTO ABC</h3>
@@ -42,10 +41,11 @@
                 <br>
                 romanamtb.com.br
             </p>
-            <img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px" style="top: 0px;"><img src="/src/img/instituto-abc-logo.png" alt="Instituto ABC" height="150px">
+            <img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="50px" style="top: 0px;"><img src="/src/img/instituto-abc-logo.png" alt="Instituto ABC" height="75px">
         </div>
     </div>
     <footer>
+        <p>© Romana MTB - Todos os direitos reservdaos.</p>
     </footer>
 </body>
 </html>
