--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                 <br>
                 romanamtb.com.br
             </p>
-            <img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="50px" style="top: 0px;"><img src="/src/img/instituto-abc-logo.png" alt="Instituto ABC" height="75px">
+            <img src="/src/img/instituto-abc-logo.png" alt="Instituto ABC" height="125px">
         </div>
     </div>
     <footer>
-        <p>© Romana MTB - Todos os direitos reservdaos.</p>
+        <p>© Romana MTB - Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
