--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>
                 Informações no site:
                 <br>
-                romanamtb.com.br
+                <a href="https://romana-mtb.github.io">romana-mtb.github.io</a>
             </p>
             <img src="/src/img/instituto-abc-logo.png" alt="Instituto ABC" height="200px">
         </div>
