--- a/404.html
+++ b/404.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Eventos de bike.">
+    <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
+    <meta name="author" content="Kaio HSG">
+    <title>Erro 404 - Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
-    <title>Erro 404 - Romana MTB</title>
     <style>
         #content div {
             top: 250px;
