--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
     <style>
+        /* Remover barra de rolagem */
+        body {
+            overflow: hidden;
+        }
         /* Background */
         #content {
             height: 1080px;
@@ -39,12 +43,7 @@
             <h1>04 / 02 / 2024</h1>
             <h2>BARROSO / MG</h2>
             <h3>EM PROL DO INSTITUTO ABC</h3>
-            <p>
-                Informações no site:
-                <br>
-                <a href="https://romana-mtb.github.io">romana-mtb.github.io</a>
-            </p>
-            <img src="/src/img/instituto-abc-logo.png" alt="Instituto ABC" height="200px">
+            <a href="https://institutoabc.org.br" target="_blank"><img src="/src/img/instituto-abc-logo.png" alt="Instituto ABC" height="200px"></a><br>
         </div>
     </div>
     <footer>
