--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
+    <style>
+        /* Regulamento PDF */
+        #regulamento-pdf {
+            height: 70vh;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -25,7 +32,8 @@
     </header>
     <div id="content">
         <div>
-            REGULAMENTO
+            <h1>Regulamento</h1>
+            <iframe id="regulamento-pdf" src="/src/pdf/regulamento.pdf" frameborder="0"></iframe>
         </div>
     </div>
     <footer>
