--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -33,7 +33,7 @@
     <div id="content">
         <div>
             <h1>Regulamento</h1>
-            <iframe id="regulamento-pdf" src="/src/pdf/regulamento.pdf" frameborder="0"></iframe>
+            <object id="regulamento-pdf" data="/src/pdf/regulamento.pdf" type="application/pdf">Seu navegador não suporta arquivos em PDF. Baixe-o <a href="/src/pdf/regulamento.pdf">aqui</a>.</object>
         </div>
     </div>
     <footer>
