--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Eventos de bike.">
     <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
-    <meta name="author" content="Kaio HSG">
+    <meta name="author" content="Romana MTB, Kaio HSG">
     <title>Erro 404 - Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
@@ -46,7 +46,7 @@
         </div>
     </div>
     <footer>
-        <p>© Romana MTB - Todos os direitos reservdaos.</p>
+        <p>© Romana MTB - Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
