--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Eventos de bike.">
     <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
-    <meta name="author" content="Kaio HSG">
+    <meta name="author" content="Romana MTB, Kaio HSG">
     <title>Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
