--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
     <style>
-        /* Remover barra de rolagem */
-        body {
-            overflow: hidden;
-        }
         /* Background */
         #content {
             height: 1080px;
@@ -22,6 +18,26 @@
             background-size: cover;
             background-position: right;
             background-repeat: no-repeat;
+        }
+
+        /* Imagens */
+        #desafio-romana-mtb {
+            height: 250px;
+        }
+        #instituto-abc-logo {
+            height: 200px;
+        }
+        
+
+        /* Tela > 530px */
+        @media (max-width: 530px) {
+            /* Imagens */
+            #desafio-romana-mtb {
+                height: 185px;
+            }
+            #instituto-abc-logo {
+                height: 150px;
+            }
         }
     </style>
 </head>
@@ -39,11 +55,11 @@
     </header>
     <div id="content">
         <div>
-            <img id="desafio-romana-mtb" src="/src/img/desafio-romana-mtb-logo.png" alt="Romana MTB MTB" height="250px" style="margin-top: 40px;">
+            <img id="desafio-romana-mtb" src="/src/img/desafio-romana-mtb-logo.png" alt="Romana MTB MTB">
             <h1>04 / 02 / 2024</h1>
             <h2>BARROSO / MG</h2>
             <h3>EM PROL DO INSTITUTO ABC</h3>
-            <a href="https://institutoabc.org.br" target="_blank"><img src="/src/img/instituto-abc-logo.png" alt="Instituto ABC" height="200px"></a><br>
+            <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/instituto-abc-logo.png" alt="Instituto ABC"></a><br>
         </div>
     </div>
     <footer>
