--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
     <style>
+        /* Esconder scrollbar*/
+        body {
+            overflow: hidden;
+        }
+
         /* Background */
         #content {
             height: 1080px;
@@ -29,7 +34,7 @@
         }
         
 
-        /* Tela > 530px */
+        /* Tela < 530px */
         @media (max-width: 530px) {
             /* Imagens */
             #desafio-romana-mtb {
