--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -16,12 +16,6 @@
             height: 70vh;
             width: 100%;
         }
-
-        /* Regulamento HTML */
-        #regulamento-html {
-            height: 65vh;
-            width: 100%;
-        }
     </style>
 </head>
 <body>
@@ -39,10 +33,7 @@
     <div id="content">
         <div>
             <h1>Regulamento</h1>
-            <object id="regulamento-pdf" data="/src/pdf/regulamento.pdf" type="application/pdf">
-                <iframe id="regulamento-html" src="/src/html/regulamento.html"></iframe>
-                <p><a href="/src/pdf/regulamento.pdf">Baixar PDF</a></p>
-            </object>
+            <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento.pdf&embedded=true"></iframe>
         </div>
     </div>
     <footer>
