--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -33,7 +33,9 @@
     <div id="content">
         <div>
             <h1>Regulamento</h1>
-            <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento.pdf&embedded=true"></iframe>
+            <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento.pdf&embedded=true">
+                <p>Não foi possivel exibir o arquivo. Baixe-o <a href="https://romana-mtb.github.io/src/pdf/regulamento.pdf">aqui</a>.</p>
+            </iframe>
         </div>
     </div>
     <footer>
