--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Eventos de bike.">
+    <meta name="description" content="Romana MTB, eventos de bike.">
     <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
     <meta name="author" content="Romana MTB, Kaio HSG">
     <title>Regulamento - Romana MTB</title>
@@ -34,7 +34,7 @@
         <div>
             <h1>Regulamento</h1>
             <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento.pdf&embedded=true">
-                <p>Não foi possivel exibir o arquivo. Baixe-o <a href="https://romana-mtb.github.io/src/pdf/regulamento.pdf">aqui</a>.</p>
+                <p>Não foi possivel exibir o arquivo. Baixe-o <a href="/src/pdf/regulamento.pdf">aqui</a>.</p>
             </iframe>
         </div>
     </div>
