--- a/fotos/index.html
+++ b/fotos/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Eventos de bike.">
+    <meta name="description" content="Romana MTB, eventos de bike.">
     <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
     <meta name="author" content="Romana MTB, Kaio HSG">
     <title>Fotos - Romana MTB</title>
@@ -25,7 +25,7 @@
     </header>
     <div id="content">
         <div>
-            FOTOS
+            <h1>Fotos</h1>
         </div>
     </div>
     <footer>
