--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             background-position: right;
             background-repeat: no-repeat;
         }
+        #content .text {
+            padding: 0px;
+            background-color: #000000bf;
+            padding: 10px;
+            width: 425px;
+            border-radius: 15px;
+        }
 
         /* Imagens */
         #desafio-romana-mtb {
@@ -61,9 +68,11 @@
     <div id="content">
         <div>
             <img id="desafio-romana-mtb" src="/src/img/desafio-romana-mtb-logo.png" alt="Romana MTB MTB">
-            <h1>04 / 02 / 2024</h1>
-            <h2>BARROSO / MG</h2>
-            <h3>EM PROL DO INSTITUTO ABC</h3>
+            <div class="text">
+                <h1>04 / 02 / 2024</h1>
+                <h2>BARROSO / MG</h2>
+                <h3>EM PROL DO INSTITUTO ABC</h3>
+            </div>
             <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/instituto-abc-logo.png" alt="Instituto ABC"></a><br>
         </div>
     </div>
