--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             background-repeat: no-repeat;
         }
         #content .text {
-            padding: 0px;
             background-color: #000000bf;
             padding: 10px;
             width: 425px;
@@ -43,6 +42,13 @@
 
         /* Tela < 530px */
         @media (max-width: 530px) {
+            /**/
+            #content .text {
+                padding: 5px;
+                width: 300px;
+                border-radius: 10px;
+            }
+            
             /* Imagens */
             #desafio-romana-mtb {
                 height: 185px;
