--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             background-color: #000000bf;
             padding: 10px;
             width: 425px;
-            border-radius: 15px;
+            border-radius: 10px;
         }
 
         /* Imagens */
@@ -46,7 +46,6 @@
             #content .text {
                 padding: 5px;
                 width: 300px;
-                border-radius: 10px;
             }
             
             /* Imagens */
@@ -67,7 +66,7 @@
                 <li><a href="/">INÍCIO</a></li>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/inscricao">INSCRIÇÃO</a></li>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
