--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -15,6 +15,8 @@
         #isncricao-formulario {
             height: 70vh;
             width: 100%;
+            margin: 0;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -33,7 +35,7 @@
     <div id="content">
         <div>
             <h1>Inscrição</h1>
-            <iframe id="inscricao-formulario" src="" frameborder="0">Erro. Não foi possivel exibir o formulário.</iframe>
+            <iframe id="isncricao-formulario" src="https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?embedded=true">Carregando...</iframe>
         </div>
     </div>
     <footer>
