--- a/fotos/index.html
+++ b/fotos/index.html
@@ -19,7 +19,7 @@
                 <li><a href="/">INÍCIO</a></li>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1" target="_blank">INSCRIÇÃO</a></li>
+                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
