--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li><a href="/">INÍCIO</a></li>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1" target="_blank">INSCRIÇÃO</a></li>
+                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
@@ -76,7 +76,7 @@
             <div class="text">
                 <h1>04 / 02 / 2024</h1>
                 <h2>BARROSO / MG</h2>
-                <h3>EM PROL DO INSTITUTO ABC</h3>
+                <h4>EM PROL DO INSTITUTO ABC</h4>
             </div>
             <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/instituto-abc-logo.png" alt="Instituto ABC"></a><br>
         </div>
