--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -6,36 +6,35 @@
     <meta name="description" content="Romana MTB, eventos de bike.">
     <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
     <meta name="author" content="Romana MTB, Kaio HSG">
-    <title>Regulamento - Romana MTB</title>
+    <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1'" />
+    <title>Inscrição - Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
     <style>
-        /* Regulamento PDF */
-        #regulamento-pdf {
-            height: 70vh;
-            width: 100%;
+        /* Inscrição formulario */
+        #content h3 {
+            padding-top: 100px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB"></a>
         <nav>
             <ul>
                 <li><a href="/">INÍCIO</a></li>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
+                <li><a href="/inscricao">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
     <div id="content">
         <div>
-            <h1>Regulamento</h1>
-            <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento.pdf&embedded=true">
-                <p>Não foi possivel exibir o arquivo. Baixe-o <a href="/src/pdf/regulamento.pdf">aqui</a>.</p>
-            </iframe>
+            <h1>Inscrição</h1>
+            <h3>Redirecionado para o Google Forms...</h3>
         </div>
     </div>
     <footer>
