--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         /* Background */
         #content {
-            height: 1080px;
+            height: 100vh;
             background-image: url("/src/img/bike-background.png");
             background-size: cover;
             background-position: right;
