--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -34,7 +34,7 @@
     <div id="content">
         <div>
             <h1>Inscrição</h1>
-            <h3>Redirecionado para o Google Forms...</h3>
+            <h3>Redirecionado para um formulário seguro...</h3>
         </div>
     </div>
     <footer>
