--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Romana MTB, eventos de bike.">
     <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
     <meta name="author" content="Romana MTB, Kaio HSG">
-    <title>Regulamento - Romana MTB</title>
+    <title>Regulamento | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
@@ -33,9 +33,9 @@
     <div id="content">
         <div>
             <h1>Regulamento</h1>
-            <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento.pdf&embedded=true">
+            <object id="regulamento-pdf" type="text/html" data="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento.pdf&embedded=true">
                 <p>Não foi possivel exibir o arquivo. Baixe-o <a href="/src/pdf/regulamento.pdf">aqui</a>.</p>
-            </iframe>
+            </object>
         </div>
     </div>
     <footer>
