--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Romana MTB, eventos de bike.">
-    <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
-    <meta name="author" content="Romana MTB, Kaio HSG">
     <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1'" />
-    <title>Inscrição - Romana MTB</title>
+    <title>Inscrição | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
