--- a/fotos/index.html
+++ b/fotos/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Romana MTB, eventos de bike.">
-    <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
-    <meta name="author" content="Romana MTB, Kaio HSG">
-    <title>Fotos - Romana MTB</title>
+    <title>Fotos | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
