--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Romana MTB, eventos de bike.">
+    <meta name="robots" content="follow, index">
+    <meta name="description" content="Faça sua inscrição para o Romana MTB 2024.">
     <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1'" />
     <title>Inscrição | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
@@ -13,6 +14,10 @@
         /* Inscrição formulario */
         #content h3 {
             padding-top: 100px;
+            text-align: center;
+        }
+        #content p {
+            padding-top: 5%;
             text-align: center;
         }
     </style>
@@ -33,6 +38,7 @@
         <div>
             <h1>Inscrição</h1>
             <h3>Redirecionado para um formulário seguro...</h3>
+            <p>Se não for redirecionado clique <a href="https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1">aqui</a>.</p>
         </div>
     </div>
     <footer>
