--- a/404.html
+++ b/404.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Romana MTB, eventos de bike.">
-    <meta name="keywords" content="Romana, Romana MTB, Desafio Romana, Desafio Romana MTB">
-    <meta name="author" content="Romana MTB, Kaio HSG">
+    <meta name="robots" content="nofollow, noindex">
     <title>Erro 404 - Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
