--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="tx3wsgB6C3ScadKEnkoAq-x8NQCWfm5RtKI4bz-Z6YU" />
     <meta name="robots" content="follow, index">
     <meta name="description" content="Romana MTB, eventos de bike.">
     <title>Romana MTB</title>
