--- a/fotos/index.html
+++ b/fotos/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="follow, index">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Fotos dos eventos da Romana MTB.">
     <title>Fotos | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
