--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="nofollow, index">
+    <meta name="robots" content="index, nofollow">
     <meta name="description" content="Faça sua inscrição para o Romana MTB 2024.">
     <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1'" />
     <title>Inscrição | Romana MTB</title>
