--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="tx3wsgB6C3ScadKEnkoAq-x8NQCWfm5RtKI4bz-Z6YU" />
-    <meta name="robots" content="follow, index">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Romana MTB, eventos de bike.">
     <title>Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
