--- a/404.html
+++ b/404.html
@@ -27,12 +27,12 @@
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="/">INÍCIO</a></li>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
+                <li><a href="/resultados">RESULTADOS</a></li>
                 <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
