--- a/resultados/index.html
+++ b/resultados/index.html
@@ -4,18 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Regulamento para o Desafio Romana MTB 2024.">
-    <title>Regulamento | Romana MTB</title>
+    <meta name="description" content="Veja os resultados das corridas da Romana MTB.">
+    <title>Resultados | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb-icon.png">
-    <style>
-        /* Regulamento PDF */
-        #regulamento-pdf {
-            height: 70vh;
-            width: 100%;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -31,10 +24,8 @@
     </header>
     <div id="content">
         <div>
-            <h1>Regulamento</h1>
-            <object id="regulamento-pdf" type="text/html" data="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento.pdf&embedded=true">
-                <p>Não foi possivel exibir o arquivo. Tente recarregar a página, ou baixe-o <a href="/src/pdf/regulamento.pdf" target="_blank">aqui</a>.</p>
-            </object>
+            <h1>Resultados</h1>
+            <p>Sem resultados de corridas. Volte em <b>05/02/2024</b>.</p>
         </div>
     </div>
     <footer>
