--- a/fotos/index.html
+++ b/fotos/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Romana MTB" height="100px"></a>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="/">INÍCIO</a></li>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
+                <li><a href="/resultados">RESULTADOS</a></li>
                 <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
@@ -25,6 +25,7 @@
     <div id="content">
         <div>
             <h1>Fotos</h1>
+            <p>Sem fotos no momento.</p>
         </div>
     </div>
     <footer>
