--- a/resultados/index.html
+++ b/resultados/index.html
@@ -25,7 +25,7 @@
     <div id="content">
         <div>
             <h1>Resultados</h1>
-            <p>Sem resultados de corridas. Volte em <b>05/02/2024</b>.</p>
+            <p>Sem resultados no momento. Volte em <b>05/02/2024</b>.</p>
         </div>
     </div>
     <footer>
