--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
-    <link rel="icon" href="/src/img/romana-mtb-icon.png">
+    <link rel="icon" href="/src/img/romana-mtb-icon.webp">
     <style>
         /* Background */
         #content {
             height: 100%;
-            background-image: url("/src/img/bike-background.png");
+            background-image: url("/src/img/bike-background.webp");
             background-size: cover;
             background-position: right;
             background-repeat: no-repeat;
@@ -111,7 +111,7 @@
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
                 <li><a href="/fotos">FOTOS</a></li>
@@ -125,7 +125,7 @@
         <div id="left">
             <div class="image">
                 <h1>XCO</h1>
-                <img id="desafio-romana-mtb" src="/src/img/desafio-romana-mtb-logo.png" alt="Logo Desafio Romana MTB.">
+                <img id="desafio-romana-mtb" src="/src/img/desafio-romana-mtb-logo.webp" alt="Logo Desafio Romana MTB.">
             </div>
             <div id="desafio-text" class="text">
                 <h1>04 / 02 / 2024</h1>
@@ -133,7 +133,7 @@
                 <h3>EM PROL DO INSTITUTO ABC</h3>
             </div>
             <div class="image">
-                <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/instituto-abc-logo.png" alt="Logo Instituto ABC."></a><br>
+                <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/instituto-abc-logo.webp" alt="Logo Instituto ABC."></a><br>
             </div>
         </div>
         <div id="right">
