--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -8,7 +8,7 @@
     <title>Regulamento | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
-    <link rel="icon" href="/src/img/romana-mtb-icon.png">
+    <link rel="icon" href="/src/img/romana-mtb-icon.webp">
     <style>
         /* Regulamento PDF */
         #regulamento-pdf {
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
                 <li><a href="/fotos">FOTOS</a></li>
