--- a/resultados/index.html
+++ b/resultados/index.html
@@ -8,11 +8,11 @@
     <title>Resultados | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
-    <link rel="icon" href="/src/img/romana-mtb-icon.png">
+    <link rel="icon" href="/src/img/romana-mtb-icon.webp">
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb-branco-logo.png" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
                 <li><a href="/fotos">FOTOS</a></li>
