--- a/index.html
+++ b/index.html
@@ -41,35 +41,39 @@
             width: 360px;
         }
 
-        /* Divisão */
-        #content {
-            display: flex;
-            padding-bottom: 7vh;
-        }
-        #left {
-            padding: auto;
-            width: 100%;
-            text-align: left;
-        }
-        #left .text {
-            margin-right: auto;
-        }
-        #right {
-            top: 15vh;
-            height: 400px;
-            width: 100%;
-            text-align: right;
-        }
-        #right .text {
-            margin-left: auto;
-        }
-
         /* Fonte */
         #desafio-text h2 {
             font-size: 40px;
         }
         #desafio-text h3 {
             font-size: 21px;
+        }
+
+
+        /* Tela > 1100px */
+        @media (min-width: 1100px) {
+            /* Divisão */
+            #content {
+                display: flex;
+                padding-bottom: 7vh;
+            }
+            #left {
+                padding: auto;
+                width: 100%;
+                text-align: left;
+            }
+            #left .text {
+                margin-right: auto;
+            }
+            #right {
+                top: 15vh;
+                height: 400px;
+                width: 100%;
+                text-align: right;
+            }
+            #right .text {
+                margin-left: auto;
+            }
         }
 
         /* Tela < 1100px */
@@ -79,15 +83,6 @@
                 text-align: center;
                 margin: auto;
                 padding-left: 0px;
-            }
-
-            /* Divisão */
-            #content {
-                display: block;
-            }
-            #content #right {
-                top: 0px;
-                padding-top: 0px;
             }
         }
 
