--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         #left .image {
             width: 360px;
         }
+        
 
         /* Fonte */
         #desafio-text h2 {
@@ -83,6 +84,11 @@
                 text-align: center;
                 margin: auto;
                 padding-left: 0px;
+                padding-right: 0px;
+            }
+            #content #right {
+                padding-top: 0px;
+                padding-bottom: 7vh;
             }
         }
 
